--- a/hackathon/notebooks/calcium-analysis.ipynb
+++ b/hackathon/notebooks/calcium-analysis.ipynb
@@ -46,6 +46,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Preliminary steps\n",
+    "\n",
+    "In these preliminary steps, we will start to get familiar with the data. This is meant to be a quick introduction to the Python libraries and functions that we will use in this notebook.\n",
+    "\n",
+    "1. Create a `time_vector` variable that converts a frame index to a time in seconds. Note that the `FREQ` variable is already defined in the notebook and set to 10 Hz. Assume that there is 600 frames in the movie.\n",
+    "1. Create a `traces_file` variable that points to the traces file. Use the `os` module to get the path to the file. Note that the `PATH` variable is already defined in the notebook and points to the data folder of the repository.\n",
+    "1. Create an `annotation_file` variable that points to the annotation file. For this use the `traces_file` variable and replace the parts in the filename that are specific to the traces file. Note that the annotation file has a slightly different name than the traces file.\n",
+    "1. Write a function called `get_time_vector` that takes a `numpy.ndarray` as input and returns a `numpy.ndarray` that contains the time in seconds for each frame. Use the `FREQ` variable to convert the frame index to a time in seconds. The function should return an array of the same length as the input array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Using the `numpy` library, load the traces file and store it in a variable called `traces`. Use the previously created `traces_file` variable to load the file.\n",
+    "1. Display the shape of the `traces` variable to understand the dimensions of the data. \n",
+    "1. Display the minimum, maximum, and mean values of the `traces` variable to understand the range of the data.\n",
+    "1. Using the `pandas` library, load the annotation file and store it in a variable called `annotations`. Use the previously created `annotation_file` variable to load the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Using the `random` module, select a random trace from the `traces` variable and store it in a variable called `random_trace`. Use the `random.randint()` function to generate a random index.\n",
+    "1. Using the `matplotlib` library, plot the first 10 seconds of the `random_trace` variable. Use the `get_time_vector` function to set the x-axis. Add a title to the plot that indicates the index of the trace. Change the x-axis label to \"Time (s)\" and the y-axis label to \"Fluorescence (a.u.)\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Load data\n",
     "\n",
     "Implement a function named `load_traces` that loads the data from the given files. The function should take as input the path to the traces file and the path to the annotation file and return the following:\n",
