--- a/notebooks/Actin_DL.ipynb
+++ b/notebooks/Actin_DL.ipynb
@@ -1916,7 +1916,7 @@
     "\n",
     "    # Saves the predictions\n",
     "    dirname = os.path.dirname(name)\n",
-    "    savefolder = os.path.join(f\"/content/DL4HBM-2020/results/{model_name}\", dirname)\n",
+    "    savefolder = os.path.join(f\"{home}/DL4HBM-2020/results/{model_name}\", dirname)\n",
     "    os.makedirs(savefolder, exist_ok=True)\n",
     "    tifffile.imwrite(\n",
     "        os.path.join(savefolder, os.path.basename(name)),\n",
@@ -2054,7 +2054,7 @@
     "\n",
     "    # Saves the predictions\n",
     "    dirname = os.path.dirname(name)\n",
-    "    savefolder = os.path.join(f\"/content/DL4HBM-2020/results/{model_name}\", dirname)\n",
+    "    savefolder = os.path.join(f\"{home}/DL4HBM-2020/results/{model_name}\", dirname)\n",
     "    os.makedirs(savefolder, exist_ok=True)\n",
     "    tifffile.imwrite(\n",
     "        os.path.join(savefolder, os.path.basename(name)),\n",
